<resources>
    <string name="app_name">Quick Park</string>
    <string name="logo">Quick Park System logo</string>
    <string name="welcome">Welcome to Quick Park System</string>
    <string name="tnc">By using this Application and signing up you agree to our Terms and Conditions</string>
    <string name="username">username or email</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Middle Name</string>
    <string name="last_name">Surname</string>
    <string name="sex">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="pin">Pin</string>
    <string name="email">E-mail Address</string>
    <string name="identification">ID NO.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Mapbox strings -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoid2lsbHktZGV2ZWxvcGVyIiwiYSI6ImNrN2xpbGgxZjA3aDkzbHBpZm4xY2JpeXgifQ.HpzfuiGzmIvU1a7mk3wivg</string>
    <string name="user_location_permission_explanation">Permissions for location needed t o provide accurate location on the map.</string>
    <string name="user_location_permission_not_granted">Location permissions not yet allowed. Please allow for better experience.</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="user_failure">Registration unsuccessful</string>
    <string name="start_navigation">Start navigation</string>
    <string name="encode_message">Info to Encode</string>
    <string name="generate">Generate QR Code</string>
    <string name="qrcode">QRCode</string>
    <string name="applicatin_logo">The Applications Logo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cpin">Confirm Pin</string>
    <string name="loggedin_state">Keep me Logged In</string>
    <string name="prefLoginState">loginstate</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="pick_date">Date of Birth</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashoard">DashoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cars">Cars</string>
    <string name="receipts">Receipts</string>
    <string name="qr_codes">QR Codes</string>
    <string name="number_plate">Number Plate</string>
    <string name="car_manufacturer">Car Manufacturer</string>
    <string name="car_model">Car Model</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="car_listing">Cars Registered: </string>
    <string name="no">No.</string>
    <string name="view"><u>Click to View</u></string>
    <string name="users_cars">User\'s Car Image</string>
    <string name="receipt_images">The Receipts Images</string>
    <string name="qr_image">QR Code Images</string>
    <string name="ticket_listing">Tickets \n paid</string>
    <string name="dash">-</string>
    <string name="qr_scanner_image">Qr Scanner Image</string>
</resources>
