<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QrGenerator">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/qrcode"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/encode_message"
        android:layout_below="@id/qrcode"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:id="@+id/enterText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:layout_below="@id/enterText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/btnGenerate"/>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/qr_scanner"
        android:id="@+id/qr_sanner"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/qr_scanner_image"/>

</RelativeLayout>